# from-text-to-sql-agent

./: README.md  main.py  pyproject.toml
scripts/: .env.example  helpers.py  pyproject.toml  simple.py
slides/: main.html  main.qmd
web/: .env.example  app.py  helpers.py  pyproject.toml
web/templates/: index.html
